tests/ui/parser/keyword-as-as-identifier.stderr
error: expected identifier, found keyword `as`
  --> $DIR/keyword-as-as-identifier.rs:4:9
   |
LL |     let as = "foo";
   |         ^^ expected identifier, found keyword
   |
help: escape `as` to use it as an identifier
   |
LL |     let r#as = "foo";
   |         ++

error: aborting due to 1 previous error

