tests/ui/parser/keyword-as-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py as'

fn main() {
    let as = "foo"; //~ error: expected identifier, found keyword `as`
}
